2007-09-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs, src/Base/CameraWidget.cs, src/Base/PortInfoList.cs,
	  src/Base/CameraFilesystem.cs, src/Base/CameraList.cs,
	  src/Base/Context.cs, src/Base/Port.cs, src/Base/ErrorCodes.cs,
	  src/Base/CameraFile.cs, src/Base/CameraAbilitiesList.cs: Made all the
	  interop methods private instead of internal

2007-09-07   <> 

	* src/Base/Camera.cs: Added new overload for Init which allows the user to
	  connect to a specific device. Also added XML comments 

2007-09-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/PortInfoList.cs, src/Base/CameraFilesystem.cs,
	  src/Base/CameraList.cs, src/Base/Port.cs, src/Base/Object.cs,
	  src/Base/Camera.cs, src/Base/CameraFile.cs,
	  src/Base/CameraAbilitiesList.cs: Removed the old 'Cleanup' method and
	  replaced it with the standard Dispose(bool) pattern.
	* src/Base/Context.cs: Removed the old 'Cleanup' method and replaced it with
	  the standard Dispose(bool) pattern. Changed the error code to
	  GeneralError.

2007-09-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Context.cs: Fixed typo in error message.

2007-09-06  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Context.cs: Added safety check to make sure the context was
	  actually created

2007-09-05  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Camera.cs: Made the interop methods private as opposed to
	  internal - no need to be visible outside the class scope.

2007-09-05   <> 

	* libgphoto2-sharp.mdp, src/Base/CameraWidget.cs, src/Base/PortInfoList.cs,
	  src/Base/CameraFilesystem.cs, src/Base/CameraList.cs,
	  src/Base/Object.cs, src/Base/Camera.cs, src/Base/CameraFile.cs,
	  src/Base/CameraAbilitiesList.cs: Updated methods to use the
	  Error.CheckError method instead of manually doing if(Error.IsError())
	  throw ErrorException(). Added calls to Error.CheckError() where they
	  were missing previously.

2007-07-19  Patrick van Staveren  <trick@vanstaveren.us>
